[package]
name = "mm-tide-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = { version = "0.30.1", features = ["async"] }
anchor-spl = "0.30.1"
clap = { version = "4.5.27", features = ["derive"]}
tokio = { version = "1.33.0", features = ["full"] }
pumpfun = { path = "../pumpfun-rs/crates/pumpfun"}
pumpfun-cpi = { path = "../pumpfun-rs/crates/pumpfun-cpi"}
shellexpand = "2.0"
serde_json = "1.0.137"
rand = "0.9.0"
solana-transaction-status = "1.18.26"
solana-client = "1.18.26"
solana-sdk = "1.18.26"
solana-program = "1.18.26"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
isahc = "1.7.2"
borsh = { version = "1.5.3", features = ["derive"] }
spl-associated-token-account = "3.0.4"
