[package]
name = "mm-tide-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
margin-mm = { path = "./crates/margin-mm" }
alloy = { version = "0.7.3", features = ["full"] }
alloy-primitives = "0.8.11"
clap = { version = "4.5.27", features = ["derive"]}
tokio = { version = "1.33.0", features = ["full"] }
shellexpand = "2.0"
serde_json = "1.0.137"
rand = "0.9.0"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
isahc = "1.7.2"
borsh = { version = "1.5.3", features = ["derive"] }
dotenvy = "0.15.7"
anyhow = "1.0"